Mon Jan 11 09:50:24 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: check if the API version number is consistent with
	  the program version number.

Sun Jan 10 20:57:25 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (compile_massign_lhs): when index ends with splat,
	  append rhs value to it like POSTARG, since VM_CALL_ARGS_SPLAT
	  splats the last argument only.  [ruby-core:72777] [Bug #11970]

Sun Jan 10 15:45:10 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/missing.h (explicit_bzero_by_memset_s): remove
	  inline implementation by memset_s, which needs a macro before
	  including headers and can cause problems in extension libraries
	  by the order of the macro and headers.

Sun Jan 10 13:41:36 2016  Eric Wong  <e@80x24.org>

	* io.c (rb_deferr): remove long obsolete global

Sun Jan 10 09:14:42 2016  Eric Wong  <e@80x24.org>

	* ext/psych/lib/psych/visitors/yaml_tree.rb (visit_String):
	  eliminate chomp
	* lib/net/http.rb (connect): eliminate delete
	* lib/net/http/header.rb (basic_encode): ditto
	* lib/net/imap.rb (authenticate): eliminate gsub
	  (self.encode_utf7): shorten delete arg
	* lib/net/smtp.rb (base64_encode): eliminate gsub
	* lib/open-uri.rb (OpenURI.open_http): eliminate delete
	* lib/rss/rss.rb: ditto
	* lib/securerandom.rb (base64): ditto
	  (urlsafe_base64): eliminate delete!
	* lib/webrick/httpauth/digestauth.rb (split_param_value):
	  eliminate chop
	* lib/webrick/httpproxy.rb (do_CONNECT): eliminate delete
	  (setup_upstream_proxy_authentication): ditto
	  [ruby-core:72666] [Feature #11938]

Sat Jan  9 23:19:14 2016  Kuniaki IGARASHI  <igaiga@gmail.com>

	* test/ruby/test_hash.rb (test_try_convert): Add test for
	  Hash.try_convert.  [Fix GH-1190]

Sat Jan  9 23:15:25 2016  Jon Moss  <maclover7@users.noreply.github.com>

	* ext/openssl/ossl.c: Add missing variables to documentation
	  examples.  [Fix GH-1189]

Sat Jan  9 18:25:57 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
